2006-11-12  Philip van Hoof <pvanhoof@gnome.org>

	* Corrected the MimePartSaveStrategy pattern method naming
	* Various gtk-doc fixes

	* This was a major API change

2006-11-12  Øystein Gisnås <oystein@gisnas.net>

	* debian/: Added debian package information and environment

2006-11-11  Øystein Gisnås <oystein@gisnas.net>

	* libtinymail-camel/camel-lite/Makefile.am: make distcheck fix

2006-11-09  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
	removed a blank space at the end of CAMEL_MESSAGE_INFO_HEADERS
	that caused an error when trying to fetch messages from an IMAP
	server.

2006-11-09  Philip van Hoof <pvanhoof@gnome.org>

	* Introduction of the new TnySendQueue interface
	* Added a lot assertions to check for type safety
	* Made expunging of a folder work while headers are still active.
	Removed the limitation (denying the expunge to happen) and fixed the
	mmap camel-folder-summary.c implementation to support this.

	* This was a major API change

2006-11-06  Philip van Hoof <pvanhoof@gnome.org>

	* Introduction of the TnyMsgRemoveStrategy, which makes it more
	flexible to define how tinymail should remove messages (as this might
	be specific per device). Although this means a major API change, not a
	lot external API has changed. A default remove strategy is used for
	each folder and is implemented as TnyCamelMsgRemoveStrategy. This
	is an overwritable property.

	* Made a bunch of types their implementation methods virtual
	(overwritable when inheriting the type)

	* This was a major API change

2006-11-06  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-transport-account.c: adds the addresses
	of the cc and bcc fields to the list of	recipients when sending an 
	email with camel
	
2006-11-06  Philip van Hoof <pvanhoof@gnome.org>
	
	* Build environment improvements

2006-11-03  Sergio Villar Senin <svillar@igalia.com>
